fixed gap at the bottom of article#show

--- a/app/assets/stylesheets/articles.sass
+++ b/app/assets/stylesheets/articles.sass
@@ -31,10 +31,8 @@
   left: 0
   right: 0
 #article-content
-  position: relative
-  top: 80px
   width: 650px
-  margin: 0 auto
+  margin: 80px auto 0 auto
   color: #121212
   font-size: 18px
   line-height: 1.41em
